--- a/src/info/sarihh/antiinferencehub/AboutBox.form
+++ b/src/info/sarihh/antiinferencehub/AboutBox.form
@@ -84,7 +84,7 @@
                       <Color blue="ff" green="ff" red="ff" type="rgb"/>
                     </Property>
                     <Property name="icon" type="javax.swing.Icon" noResource="true" editor="org.netbeans.modules.form.editors2.IconEditor">
-                      <Image iconType="3" name="/cc/co/sarihh/antiinferencehub/resources/about.jpg"/>
+                      <Image iconType="3" name="/info/sarihh/antiinferencehub/resources/about.jpg"/>
                     </Property>
                     <Property name="verticalAlignment" type="int" value="1"/>
                     <Property name="name" type="java.lang.String" value="imageLabel" noResource="true"/>
@@ -247,7 +247,7 @@
             <Component class="javax.swing.JButton" name="okButton">
               <Properties>
                 <Property name="action" type="javax.swing.Action" editor="org.netbeans.modules.swingapp.ActionEditor">
-                  <action class="cc.co.sarihh.antiinferencehub.AboutBox" id="ok" methodName="ok"/>
+                  <action class="info.sarihh.antiinferencehub.AboutBox" id="ok" methodName="ok"/>
                 </Property>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
